--- a/styles/resume-container.css
+++ b/styles/resume-container.css
@@ -124,9 +124,7 @@
 
 
 #resume-content-div {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  display: block;
   flex-grow: 1;
   overflow-y: auto;
   overflow-x: hidden;
@@ -134,18 +132,18 @@
   box-sizing: border-box; 
   background-color: var(--background-middle);
   color: black;
-  padding: 0px;
-  margin-left: -10px;
-  margin-right: 20px;
-  padding-left: 0px;
+  padding: 0;
+  margin: 0;
   position: relative;
   pointer-events: auto;
 }
 
 .resume-content-div-child {
   max-width: 100%;
+  width: 100%;
   height: auto;
   position: relative;
+  box-sizing: border-box;
 }
 
 #resume-container-footer-div {
